welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:2: error: not found: value outsideMide
  if (outsideMide){
      ^